# dual_pathway_model

./: Dockerfile  README.md  compose.yaml
apf_planner/: CMakeLists.txt  apf_plugin.xml  package.xml
apf_planner/config/: apf_params.yaml  move_base_params.yaml
apf_planner/include/apf_planner/: apf_planner.h  classes.h
apf_planner/launch/: test_architecture.launch  test_architecture_dynamic.launch  test_architecture_static.launch
apf_planner/src/: apf_planner.cpp  classes.cpp  functions.cpp
bag_files/simulations/: dynamic_expertiment.sh  static_experiment.sh
dual_pathway_interfaces/: CMakeLists.txt  package.xml
dual_pathway_interfaces/action/: promptProcessing.action
dual_pathway_interfaces/src/: convert_euler_angles.py  fake_optitracker_node.py  fake_optitracker_node_2.py  fake_optitracker_node_dynamic.py  hybrid_optitracker_node_dynamic.py  odom_world_static_broadcaster.py  optitracker_node.py
dual_pathway_interfaces/srv/: highRoadInfo.srv
gazebo_models/mars_rover/: model.sdf
gazebo_models/person_walking/: model.sdf
gazebo_models/walls/: model.sdf
high_road/: CMakeLists.txt  package.xml
high_road/config/: info.json  vlm_config.yaml
high_road/launch/: dual_pathway.launch  realsense.launch  test_VLM_latency.launch  test_mpc_locobot.launch
high_road/src/: VisualLanguageModel.py  VisualLanguageModel_latency.py  VisualLanguageModel_tets_only_camera.py  cerebral_cortex.py
high_road/world/: test.world
low_road/: CMakeLists.txt  package.xml
low_road/config/: vlm_config.yaml
low_road/src/: VisualLanguageModel.py  VisualLanguageModel_ollama_test.py  amygdala.py  amygdala_slm.py  amygdala_test.py  amygdala_vlm.py  amygdala_vlm_maxfear.py  amygdala_vlm_multifear.py  constraints_visualization.py  controller_obstacles.py  controller_obstacles_original.py  fear_slider_node.py  (+11 more)
mpc_planner/: CMakeLists.txt
simulations/: random_world_generator.py
(+165 files in other folders)
